crates/host-macros/tests/compile_fail/command_guest_in_server_mode.rs
omnia_host_macros::runtime!({
    guests: [
        { id: "app", source: "app.wasm" },
    ],
    command_guest: "app",
});

fn main() {}
